[CHK-1379] Dev Code-Review and Deploy pipelines (#2)